style change navbar to fixed to reduce page jump

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ ul {
 } */
 
 main {
+  margin-top: clamp(50px, 12vw, 160px);
   height: 200vh;
 }
 
@@ -844,8 +845,8 @@ justify-content: center;
 }
 
 @media (max-width: 640px) {
-  body {
-    padding-top: var(--navbar-mobile-height);
+  main {
+    margin-top: var(--navbar-mobile-height);
   }
 
   .sticky-padding {
